language switch fully done