@@ -1,5 +1,8 @@
 package ui;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Locale;
 
 public class Main {
@@ -17,6 +20,8 @@ public class Main {
         Locale locale = Locale.getDefault();
         if (locale.getLanguage().equals("en")) {
             Locale.setDefault(new Locale(locale.getLanguage(), "US"));
+        } else if (locale.getLanguage().equals("fr")) {
+            Locale.setDefault(new Locale(locale.getLanguage(), "FR"));
         } else {
             if (!locale.getLanguage().equals("eo")) {
                 Locale.setDefault(new Locale("eo", ""));
@@ -34,5 +39,31 @@ public class Main {
             TerminalInterface terminal = new TerminalInterface();
             terminal.startInterface();
         }
+    }
+
+    // EFFECTS: restart the application with new locale params on JVM
+    // REQUIRES: locale-country be defined in PsychosisResource
+    public static void selfLocaleRestart(String locale, String country) {
+        List<String> command = new ArrayList<>();
+        command.add("java");
+        command.add("-Duser.language=" + locale);
+        command.add("-Duser.country=" + country);
+        command.add("-splash:data/resources/splash.jpg");
+        command.add("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED");
+        command.add("-XX:+UseG1GC");
+        command.add("-XX:MaxGCPauseMillis=200");
+        command.add("-cp");
+        command.add(System.getProperty("java.class.path"));
+        command.add(Main.class.getName());
+        command.add("-g");
+
+        ProcessBuilder processBuilder = new ProcessBuilder(command);
+        try {
+            processBuilder.inheritIO().start();
+        } catch (IOException e) {
+            e.printStackTrace();
+            return;
+        }
+        System.exit(0);
     }
 }
